--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <title>Servicios Fijos | Empresas | Movistar Empresas</title>
 
     <!--- Style -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
     <link rel="stylesheet" href="css/slick.min.css" />
 
 </head>
@@ -104,7 +104,7 @@
                     <div class="content-card">
                         <ul class="slider-service-fijos">
                             <li>
-                                <a href="#">
+                                <a href="#" id="contrata-tu-pack" position="1">
                                     <img src="css/img/section-3/img-1-section-3.webp" width="241" height="300"
                                         alt="img-1-section-3">
                                     <div class="ico-section-3">
@@ -121,7 +121,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
+                                <a href="#" id="fibra-empresas" position="2">
                                     <img src="css/img/section-3/img-2-section-3.webp" width="241" height="300"
                                         alt="img-2-section-3">
                                     <div class="ico-section-3">
@@ -138,7 +138,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
+                                <a href="#" id="internet-dedicado" position="3">
                                     <img src="css/img/section-3/img-3-section-3.webp" width="241" height="300"
                                         alt="img-3-section-3">
                                     <div class="ico-section-3">
@@ -155,7 +155,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
+                                <a href="#" id="planes-telefonia-fija" position="4">
                                     <img src="css/img/section-3/img-4-section-3.webp" width="241" height="300"
                                         alt="img-4-section-3">
                                     <div class="ico-section-3">
@@ -172,7 +172,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
+                                <a href="#" id="planes-television" position="5">
                                     <img src="css/img/section-3/img-5-section-3.webp" width="241" height="300"
                                         alt="img-5-section-3">
                                     <div class="ico-section-3">
@@ -210,7 +210,7 @@
                             <h2 class="text-mobile">Conoce tambien nuestros </br><strong>Servicios Móviles</strong></h2>
                         </div>
                         <div class="banner-button">
-                            <a href="#" class="button">Saber más</a>
+                            <a href="#" class="button banner-servicios-moviles" >Saber más</a>
                         </div>
                     </div>
                 </div>
@@ -238,7 +238,7 @@
                                         <p class="card-text">FlexSITE - FlexWAN - Súper WiFi</p>
                                     </div>
                                     <div class="card-button">
-                                        <a href="#" class="button">Conoce más</a>
+                                        <a href="#" id="servicios-networking" position="1" class="button">Conoce más</a>
                                     </div>
                                 </div>
                             </li>
@@ -254,7 +254,7 @@
                                         <p class="card-text">Seguro Anti Daños y Seguro Protección Total</p>
                                     </div>
                                     <div class="card-button">
-                                        <a href="#" class="button">Conoce más</a>
+                                        <a href="#" id="soluciones-covid-iot" position="2" class="button">Conoce más</a>
                                     </div>
                                 </div>
                             </li>
@@ -270,7 +270,7 @@
                                         <p class="card-text">Ahora tu internet llegará a todos los rincones de tu oficina o negocio</p>
                                     </div>
                                     <div class="card-button">
-                                        <a href="#" class="button">Conoce más</a>
+                                        <a href="#" id="repetidor-señal-wifi" position="3" class="button">Conoce más</a>
                                     </div>
                                 </div>
                             </li>
@@ -286,7 +286,7 @@
                                         <p class="card-text">Telefonía Ip Profesional</p>
                                     </div>
                                     <div class="card-button">
-                                        <a href="#" class="button">Conoce más</a>
+                                        <a href="#" id="siptrunk" position="4" class="button">Conoce más</a>
                                     </div>
                                 </div>
                             </li>
@@ -309,7 +309,7 @@
                             <img src="./css/img/section-6/img-2-section-6.webp" alt="img-2-section-6" width="321" height="91">
                         </div>
                         <div class="banner-button">
-                            <a href="#" class="button">Saber más</a>
+                            <a href="#" class="button banner-tes">Saber más</a>
                         </div>
                     </div>
                 </div>
@@ -318,8 +318,8 @@
     </div>
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
     <script src="js/slick.min.js"></script>
-    <script src="js/slider.js"></script>
-    <script src="js/marcaje.js"></script>
+    <script src="js/slider.min.js"></script>
+    <script src="js/marcaje.min.js"></script>
 </body>
 
 </html>
